initial ports implementation
